Fix extra padding below navbar

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -93,6 +93,10 @@ main {
   flex-direction: column;
   align-items: center;
   gap: 16px;
+  padding-top: calc(var(--nav-height) + 40px);
+}
+
+main:has(.home) {
   padding-top: var(--nav-height);
 }
 
